07-nginx-service-nodeport.yaml
# Service of type NodePort
# This YAML file demonstrates how to create a Kubernetes Service of type NodePort.
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: k8s-demo
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
